POST feature for user login

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
 			<div data-role="header">
 				<h1>Login</h1>
 			</div>
+			<form class="userLoginPage" id ="userLoginPage">
 			<div data-role="content">
 				<div class="ui-field-contain">
 					<label for="uname">User Name</label>
@@ -51,7 +52,7 @@
 				<!--  <a href="#Home" id="button-1" class="ui-btn ui-corner-all">Submit</a>-->
 				<input data-enhanced="true" type="button" value="Submit" id="submitforcheck"/>
 			</div>
-			
+			</form>/
 		</div>
 
         <div data-role="page" id="Home">
